# new-python-repo

./: .gitignore  DEMO.ipynb  HYBRID_DOCS_SUMMARY.md  LICENSE  LOGGING_SUMMARY.md  README.md  check_config.py  manage_github_pages.sh  mkdocs.yml  project.toml  pyproject.toml  run_demo.sh  run_docs.sh
.github/: copilot-instructions.md
.github/workflows/: docs.yml
docs/: gen_ref_pages.py  github-pages-setup.md  index.md
docs/api/: demo-sub-app.md  index.md  libs.md
docs/getting-started/: demos.md  import-patterns.md  quick-start.md
docs/tutorials/: blog.code-workspace  docs-setup.md  github-pages-config.md  logging-guide.md
src/: demo_app.py
src/demo_sub_app/: example_module2.py  sub_demo_app.py
src/libs/: __init__.py  example_module1.py  logging_utils.py
